--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - 'mariadb_data:/bitnami'
   moodle:
-    image: 'bitnami/moodle:3'
+    image: 'darriush/stayncharge:latest'
     environment:
       - MARIADB_HOST=mariadb
       - MARIADB_PORT_NUMBER=3306
